kubernetes_files/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      run: test-nginx
  template:
    metadata:
      labels:
        run: test-nginx
    spec:
      containers:
      - name: test-nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: test-nginx-configuration
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        - name: test-nginx-configuration
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
        - name: test-nginx-persistent-volume
          mountPath: /www
      volumes:
      - name: test-nginx-persistent-volume
        hostPath:
          path: /mnt/nfs_share
      - name: test-nginx-configuration
        configMap:
          name: test-nginx-configmap
          items:
            - key: nginx.conf
              path: nginx.conf
            - key: default.conf
              path: default.conf
