kubernetes_files/_nginx-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: test-nginx
subsets:
  - addresses:
      - ip: 192.168.1.30
    ports:
      - port: 82
