kubernetes_files/deploy_tvheadend.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: alerta
    spec:
      containers:
        - image: linuxserver/tvheadend:latest
          name: tvheadend
          imagePullPolicy: "always"
          ports:
            - containerPort: 8443
            - 9981:9981
            - 9982:9982
---

apiVersion: v1
kind: Service
metadata:
  name: alerta-service
  labels:
    run: alerta-service
spec:
  selector:
    app: alerta
  ports:
  - name: http
    port: 8080
    protocol: TCP
