kubernetes_files/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-nginx-service
  labels:
    run: nginx-service
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    name: http
  - port: 443
    protocol: TCP
    name: https
  selector:
    run: test-nginx
