kubernetes_files/_nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-nginx
spec:
  rules:
  - host: "fucker"
    http:
      paths:
      - pathType: Prefix
        path: "/bar"
        backend:
          service:
            name: test-nginx
            port:
              number: 82
